# HFneo4j

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo_results.py  demo_standalone.py  pyproject.toml  requirements.txt
docker/: docker-compose.yml  prometheus.yml
docker/grafana-dashboards/: hedge-fund-stack.json
notebooks/: example_usage.ipynb
scripts/: load_sample_data.py  setup_neo4j.py
src/pillars/anomaly/: trade_radar.py
src/pillars/contagion/: debtrank.py
src/pillars/gefm/: factor_model.py
src/pillars/gnn/: alpha_engine.py
src/pillars/gsrp/: risk_parity.py
src/pipelines/: etl_manager.py
src/utils/: backtest.py  monitoring.py
